# routes/api/user.js
@@ -1,27 +1,18 @@
 const express = require("express");
-const {
-  current,
-  update,
-  addWater,
-  deleteWater,
-  goalUpdate,
-  weightStatistic,
-  getAllStatistic,
-  addFood,
-} = require("../../controllers/userControllers");
+const ctrl = require("../../controllers/userControllers");
 const auth = require("../../middleware/midauth");
 
 const router = express.Router();
 
-router.get("/current", auth, current);
-router.put("/update", auth, update);
-router.put("/goal", auth, goalUpdate);
-router.post("/weight", auth, weightStatistic);
-router.post("/food-intake", auth, addFood);
+router.get("/current", auth, ctrl.current);
+router.put("/update", auth, ctrl.update);
+router.put("/goal", auth, ctrl.goalUpdate);
+router.post("/weight", auth, ctrl.weightStatistic);
+router.post("/food-intake", auth, ctrl.addFood);
 router.put("/food-intake/:id");
 router.delete("/food-intake/");
-router.post("/water-intake", auth, addWater);
-router.delete("/water-intake", auth, deleteWater);
-router.get("/statistics", auth, getAllStatistic);
+router.post("/water-intake", auth, ctrl.addWater);
+router.delete("/water-intake", auth, ctrl.deleteWater);
+router.get("/statistics", auth, ctrl.getAllStatistic);
 
 module.exports = router;
